tests/sksl/errors/ReservedNameFvec3.glsl
### Compilation failed:

error: 1: 'fvec3' is a reserved word
int fvec3;
    ^^^^^
1 error
